<?xml version="1.0"?>
<package format="2">
  <name>waypoint_nav2</name>
  <version>0.0.1</version>
  <description>
    ROS 2 package for navigation with waypoints
  </description>
  <maintainer email="s19c1057fa@s.chibakoudai.jp">kazuki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
